# nxBender

./: nxBender.peerconfig  pyproject.toml
etc/ppp/ip-up.d/: 00-usepeerdns.sh
nxbender/: __init__.py  nx.py  ppp.py
